[fixes]: made update buttons in settings module visible

--- a/src/assets/css/_components.scss
+++ b/src/assets/css/_components.scss
@@ -484,12 +484,13 @@ table {
   font-weight: 400;
   font-size: 14px;
 }
-.delete-btn{
+.delete-btn, .primary-btn{
     background: linear-gradient(93.88deg, #49A8F8 6.88%, #0053F4 74.45%);
     border-radius: 16px;
     color: #fff;
     border: none;
     padding: 12px;
+    width: 100%;
 }
 .cancel-btn{
   background-color: #ccc;
